add --enable-preview to tests