@@ -178,7 +178,7 @@
 				<version>3.0.0-M5</version>
 				<configuration>
 					<!-- required due to https://github.com/apache/maven-surefire/pull/263 -->
-					<argLine>--add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED</argLine>
+					<argLine>--enable-preview --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED</argLine>
 				</configuration>
 			</plugin>
 
